# thesis_AMR

./: README.md
FastSAM/: Inference.py  Inference_d435.py  prompt.py
cuda11.2cudnn8/: CMakeLists.txt
cuda11.2cudnn8/launch/: multi_camera_hand.launch  multi_camera_hand_demo.launch
cuda11.2cudnn8/rviz/: handpose_gesture.rviz  handpose_gesture_new.rviz
cuda11.2cudnn8/scripts/: demo_handpose.py  handpose_evaluation.py  side_camera_handpose_gesture_cpu.py  side_camera_handpose_gesture_demo.py  side_camera_handpose_gesture_mix.py  side_camera_handpose_gesture_mix_without_gesture_flag.py  test.py  test_camera_num.py  top_camera_handpose_gesture_mix.py  top_camera_handpose_gesture_mix_demo.py
egohand_ros/: egohands_fastsam.py
widden/src/apriltag/apriltags/include/AprilTags/: TagDetection.h
widden/src/apriltag/apriltags_ros/: CMakeLists.txt
widden/src/apriltag/apriltags_ros/include/apriltags_ros/: common_functions.h  single_image_detector.h
widden/src/apriltag/apriltags_ros/launch/: calibration.launch  ensenso.launch  kinectV2.launch  multiple_tag.launch  pylon_camera.launch  realsense_d435.launch  side_camera_tag.launch  tag_surgery.launch  top_camera_tag.launch  usb_camera.launch  usbcam.launch  usbcam_test.launch  zed.launch
widden/src/apriltag/apriltags_ros/msg/: AprilTagDetection.msg
widden/src/apriltag/apriltags_ros/src/: apriltag_detector.cpp
widden/src/arm_control/demoSub/: CMakeLists.txt  package.xml
widden/src/arm_control/demoSub/src/: control_final.cpp  demo_merge (copy).cpp  demo_merge.cpp  demo_merge_time.cpp  demo_picking.cpp  go_certain_place.cpp  handover_position_control.cpp  thesis_merge.cpp  tm_auo.cpp  tm_demo_picking_pose.cpp  tm_reflexxes.cpp
widden/src/arm_control/demoSub/urdf/: tm700_wall.xacro
widden/src/arm_control/sophia_test/: CMakeLists.txt  bt300_demo  d435_setting  hololens_demo  package.xml  robot2tag0.txt  tf.rviz
widden/src/arm_control/sophia_test/Qt_gui/Calibrate_gui/: Calibrate_gui.pro  mainwindow.cpp  mainwindow.ui
widden/src/arm_control/sophia_test/Qt_gui/build-Calibrate_gui-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Calibrate_gui  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
widden/src/arm_control/sophia_test/include/tm_reflexxes/: tm_otg.h  tm_reflexxes.h
widden/src/arm_control/sophia_test/launch/: holo_demo.launch  qr2AR.launch  qr2bone.launch  tf_pub.launch
widden/src/arm_control/sophia_test/scripts/: trajectory_visualize.py
widden/src/arm_control/sophia_test/src/: Untitled Document  bt300.cpp  find_target.cpp  find_target_bone.cpp  find_target_bone0524.cpp  find_target_qr2bone.cpp  find_target_qr2bone1118.cpp  find_target_qr2bone220705.cpp  find_target_qr2bone_0601.cpp  safe_move.cpp  self_camera_info.py  settarget.cpp  start_move.cpp  tag_pose_test.cpp  tag_tf_hole.cpp  tag_tf_test.cpp  target_pub_test.cpp  tm_move.cpp  tm_move2target.cpp  tm_move2target_csv.cpp  tm_move2target_line.cpp  tm_move2target_line_yun.cpp  tm_move_velcontrol.cpp  tm_move_velcontrol0915.cpp  tm_move_velcontrol1102.cpp  tm_move_velcontrol_OnlyP.cpp  tm_move_velcontrol_co.cpp  tm_move_velcontrol_widden.cpp  tm_move_velcontrol_yun.cpp  tm_pose_test.cpp  tm_simulate.cpp
widden/src/arm_control/sophia_test/src/Joint_values/: real_value1230-1.txt  real_value1230-2.txt  virtual_value1230-1.txt  virtual_value1230-2.txt
widden/src/arm_control/sophia_test/src/tool_pose/: error0107-1.txt  error0107-2.txt  error0107-3.txt  error0109.txt  tool_pose0107-1.txt  tool_pose0107-2.txt  tool_pose0107-3.txt  tool_pose0109.txt  tool_pose_yun.txt  virtual_path0107-1.txt  virtual_path0107-2.txt
widden/src/arm_control/sophia_test/src/tool_pose/0207/: error0207-1.txt  error0207-2.txt  tool_pose0207-1.txt  tool_pose0207-2.txt  virtual_path0207-1.txt  virtual_path0207-2.txt
widden/src/handover_pkg/: CMakeLists.txt  package.xml
widden/src/handover_pkg/launch/: launch_sample.launch
widden/src/handover_pkg/scripts/: img_fix_by_depth.py
widden/src/handover_pkg/src/: point_adjust.cpp  point_adjust_with_ukf_async.cpp  point_adjust_with_ukf_new.cpp  point_adjust_with_ukf_new_backup_0131.cpp  point_adjust_with_ukf_odom.cpp  point_adjust_with_ukf_origin.cpp  pub_handpose_release_gripper_ukf.cpp  pub_simple_point.cpp
widden/src/other_pkg/: CMakeLists.txt  package.xml  test_d435.py
widden/src/other_pkg/src/: evaluate_rpy.cpp  pub_handpose.cpp  pub_new_imu.cpp  pub_top_handpose.cpp  tm_move_velcontrol_widden.cpp
widden/src/robot_localization/: CMakeLists.txt
widden/src/robot_localization/debug/: test.txt
widden/src/robot_localization/launch/: ukf_handpose.launch  ukf_handpose_one_camera.launch  ukf_ss.launch  ukf_test.launch
widden/src/robot_localization/params/: ukf_handpose.yaml  ukf_handpose_backup_0131.yaml  ukf_handpose_one_camera.yaml  ukf_ss.yaml  ukf_template.yaml  ukf_test.yaml
widden/src/robot_localization/src/: filter_base.cpp  ros_filter.cpp  ukf_localization_node_test.cpp
widden/src/test_pkg/: CMakeLists.txt  package.xml
widden/src/test_pkg/launch/: ukf_tf_test.launch
widden/src/test_pkg/scripts/: rgb_limit_depth.py  side_camera_handpose_gesture.py  side_camera_handpose_gesture_mix.py  test.py  test1.py  top_camera_handpose_gesture.py  top_camera_handpose_gesture_mix.py
widden/src/test_pkg/src/: ukf_testing.cpp
